[package]
name = "vantage-5G"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
libbpf-sys = "1.4" # without bpftool using vantage CLI
anyhow = "1.0"

tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.87", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.20", features = ["latest"] }
serde_json = "1.0"

prometheus = "0.13"
prometheus_exporter = "0.8"
lazy_static = "1.4"
