[package]
name = "vantage-5G"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"

# 로우레벨 sys 바인딩 위에 고수준 rs 매니저를 중첩 레이어로 쌓습니다.
libbpf-sys = "1.4"
libbpf-rs = "0.23"

tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.87", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.20", features = ["latest"] }
serde_json = "1.0"

prometheus = "0.13"
prometheus_exporter = "0.8"
lazy_static = "1.4"
